--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,6 @@
         
         * After this date, this repository changes only by the
         addition of new files. See another component-repository
-        of this package, <https://github.com/dmparrishphd/
-        constrainedExtremaSimple-CORW>, for dynamic package
-        components.
+        of this package,
+        <https://github.com/dmparrishphd/constrainedExtremaSimple-CORW>,
+        for dynamic package components.
